# Enterprise-Agent

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  check_collection.py  create_collection.py  create_memory_collection.py  create_semantic_collection.py  main.py  package-lock.json  requirements.txt  reset_collection.py  test_agentic_retrieval.py  test_context.py  test_embedding.py  test_hybrid.py  test_learning.py  test_llm.py  test_memory_search.py  test_planner.py  test_redis.py  test_router.py  test_tavily.py
backend/app/: main.py
backend/app/agents/: critic.py  parser.py  planner.py  researcher.py  router.py  tool_router.py  writer.py
backend/app/api/: chat.py  files.py  memory.py  session.py  settings.py  stream.py  traces.py  upload.py
backend/app/cache/: redis_client.py
backend/app/config/: settings.json  settings_manager.py
backend/app/core/: config.py  events.py  llm.py
backend/app/evaluation/: evaluator.py  (+1 more)
backend/testing/: test_bulk_ingest.py  test_citations.py  test_document_rag.py  test_embedding.py  test_fact_save.py  test_graph.py  test_import.py  test_ingest.py  test_logs.py  test_memory.py  test_memory_search.py  test_multi_agent.py  test_pdf_search.py  test_qdrant.py  test_search.py  test_semantic.py  test_tool_router.py
docs/: 01-Architecture.md  03-Configuration.md  04-Deployment.md  06-RAG.md  07-Memory.md  08-LangGraph.md  09-Project-Structure.md  10-Roadmap.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.css
(+102 files in other folders)
